fix spacing on home-type field of edit form

--- a/app/assets/stylesheets/show-page/edit-form.scss
+++ b/app/assets/stylesheets/show-page/edit-form.scss
@@ -43,7 +43,7 @@ $form-items-width: 800px;
     }
 
     .home-type{
-      width: 130px;
+      width: 180px;
     }
 
     .select-style:first-of-type{
